--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "trufflehog",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Search for new subreddit posts that match your criteria",
-  "main": "index.js",
+  "main": "lib/index.js",
   "bin": {
-    "trufflehog": "index.js"
+    "trufflehog": "lib/index.js"
   },
   "scripts": {},
   "repository": {
